# detection.cpp

./: .gitignore  CMakeLists.txt  README.md  app.cpp
include/: anchor_generator.h  anchor_head.h  anchor_head_multi.h  anchor_head_single.h  backbone2d.h  box_utils.h  iou3d_cpu.h  model.h  pillar_vfe.h  pointpillar_scatter.h  pointpillars.h  target_assigner.h  utils.h  voxelization.h
src/: iou3d_cpu.cpp  iou3d_nms.cpp  voxelization_cpu.cpp
